# 10k_Day-API

./: .gitignore  database.py  main.py  models.py  pyproject.toml  readme.md  schemas.py  test_main.http
app/: main.py  models.py  oath2.py  schemas.py  utils.py
app/routers/: auth.py  exercise.py  user.py
tests/: test_main.py
